<resources>
    <string name="app_name">MyDemo</string>
    <string name="one">1</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="five">5</string>
    <string name="two">2</string>
    <string name="nine">9</string>
    <string name="six">6</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="clr">CLR</string>
    <string name="bracket_left">(</string>
    <string name="bracket_right">)</string>
    <string name="delit">Del</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="equally">=</string>
    <string name="point">.</string>
</resources>